fixed separate column scrolling on mobile and window resizing event

--- a/static/css/expresso.css
+++ b/static/css/expresso.css
@@ -1,7 +1,3 @@
-body {
-    overflow: hidden;
-}
-
 p, td {
     font-family: 'Georgia' !important;
 }
